--- a/authentication-lab/templates/add_tweet.html
+++ b/authentication-lab/templates/add_tweet.html
@@ -6,5 +6,26 @@
 </head>
 <body>
     Great Job!
+    <button><a href = "http://127.0.0.1:5000/signout">Signout</a></button>
+    
+    <form method="post" action="/add_tweet">
+        <div>
+        <label>Title</label>
+        <div>
+            <input type="text"  name="title" id="title" required>
+        </div>
+        </div>
+        <div>
+        <label>Text</label>
+        <div>
+            <input type="text"  name="text" id="text" required>
+        </div>
+        </div>
+        <div>
+        <a href = "http://127.0.0.1:5000/all_tweets"><input type="submit"/></a>
+
+    </div>
+        
+    </form>
 </body>
 </html>
