--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -31,6 +31,28 @@
                 <input type="password"  name="password" minlength="6">
             </div>
         </div>
+
+        <div>
+            <label>Full name*</label>
+            <div>
+                <input type="text"  name="full_name" id="full_name" required>
+            </div>
+        </div>
+
+        <div>
+            <label>Username*</label>
+            <div>
+                <input type="text"  name="username" id="username" required>
+            </div>
+        </div>
+
+        <div>
+            <label>Bio*</label>
+            <div>
+                <input type="text"  name="bio" id="bio" required>
+            </div>
+        </div>
+
         
         <!-- Button -->
         <div>
